--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Magic Eight Ball</string>
+    <string name="ask_button">ASK</string>
+    <string name="top_text">Reveal the answer to all your questions!</string>
 </resources>
